tests/ui/invalid_pyclass_item.stderr
error: #[pyclass] only supports structs and enums.
 --> tests/ui/invalid_pyclass_item.rs:4:1
  |
4 | fn foo() {}
  | ^^^^^^^^^^^
