tests/ui/invalid_pyclass_item.rs
use pyo3::prelude::*;

#[pyclass]
fn foo() {}

fn main() {}
